# br41n.io-ssvep-simulation-GUI

./: .gitignore  README.md  SSVEP_CLASSIFIER_IMPROVEMENTS.md  SSVEP_Classification_Paper.aux  SSVEP_Classification_Paper.fdb_latexmk  SSVEP_Classification_Paper.fls  SSVEP_Classification_Paper.out  SSVEP_Classification_Paper.tex  SSVEP_Simulation.spec  analyze_all_datasets.py  build_executable.py  build_executables.md  enhanced_simulation.py  error_logger.py  feature_scaler.pkl  mac_build.py  main.py  process_all_datasets.py  pyproject.toml  requirements.txt  simulation.py  simulation.spec  ssvep_classifier.py  ssvep_visualization.py  train_classifier.py  train_combined_visualize.py  trained_combined_model.pkl  visualize_predictions.py
data/: classInfo_4_5.m
