[project]
name = "ssvep-hackathon-master"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "colorama>=0.4.6",
    "h2o>=3.46.0.7",
    "mat73>=0.65",
    "matplotlib>=3.10.1",
    "mne>=1.9.0",
    "notebook>=7.4.1",
    "numpy>=2.2.5",
    "pandas>=2.2.3",
    "pygame>=2.6.1",
    "pyinstaller>=6.13.0",
    "python-weka-wrapper3>=0.3.2",
    "requests>=2.32.3",
    "scikit-learn>=1.6.1",
    "scipy>=1.15.2",
    "seaborn>=0.13.2",
    "tsfresh>=0.21.0",
    "weka>=2.0.2",
]
